chore: address review feedback and finalize API cleanup
Agent-Logs-Url: https://github.com/ai-pipestream/quarkus-grpc-gatherer/sessions/009a50a5-4c5d-4942-ba52-095fb507a1b3

Co-authored-by: krickert <313612+krickert@users.noreply.github.com>